# HillCipher-with-GaloisField-CiphertextExpansion

./: .gitignore  .gitmodules  README.md
.github/workflows/: build-linux.yml  build-windows.yml  codeql.yml  linux-build-template.yml  linux.yml  memory-check-linux.yml  test-linux.yml  test-windows.yml  windows-build-template.yml  windows.yml
GaloisFieldHillCipher/: CMakeLists.txt  GaloisFieldHillCipher.c  GaloisFieldHillCipher.cpp  GaloisFieldHillCipher.h
GaloisFieldHillCipher/.github/workflows/: build-linux.yml  build-windows.yml  memory-check-linux.yml  test-linux.yml  test-windows.yml
GaloisFieldHillCipher/Examples/Samples/: encrypted_text.txt  example_plaintext.txt  log.txt
GaloisFieldHillCipher/include/: ArgumentParser.h  CSPRNG.h  Cipher.h  CipherModeHandlers.h  CipherUtils.h  EncryptionMatrixGeneration.h  ExtendedHillCipher.h  FileOperations.h  FileValidation.h  MathUtils.h  MatrixSerDes.h  MatrixUtils.h  Modes.h  OutputFormat.h  PrintUtils.h  Secrets.h  StatusCodes.h
GaloisFieldHillCipher/include/Cipher/: AsciiMapping.h  CSPRNG.h  Cipher.h  CipherModeHandlers.h  CipherUtils.h  CiphertextExpansion.h
GaloisFieldHillCipher/include/Cipher/CipherParts/: AffineTransformation.h  AsciiMapping.h  BlockDividing.h  CSPRNG.h  Padding.h  Permutation.h
GaloisFieldHillCipher/include/IO/: FileOperations.h  FileValidation.h  LoggerUtils.h  MatrixSerDes.h  PrintUtils.h  SerDes.h  VerbosityControl.h
GaloisFieldHillCipher/include/Math/: FieldBasicOperations.h  MathUtils.h  MatrixDeterminant.h  MatrixInverse.h  MatrixMultiplication.h  MatrixUtils.h
GaloisFieldHillCipher/include/Parsing/: ArgumentParser.h  ModeParsers.h
GaloisFieldHillCipher/include/Secrets/: Secrets.h  SecretsGeneration.h
GaloisFieldHillCipher/src/: ArgumentParser.c  CSPRNG.c  Cipher.c  CipherModeHandlers.c  CipherUtils.c  CipherUtils.cpp  EncryptionMatrixGeneration.c  EncryptionMatrixGeneration.cpp  ExtendedHillCipher.c  ExtendedHillCipher.cpp  FieldBasicOperations.c  FileOperations.c  FileValidation.c  MathUtils.c  MathUtils.cpp  MatrixSerDes.c  MatrixUtils.c  PrintUtils.c
GaloisFieldHillCipher/src/Cipher/: AsciiMapping.c  BlockDividing.c  CSPRNG.c  Cipher.c  CipherModeHandlers.c  CipherUtils.c  CiphertextExpansion.c  Padding.c
GaloisFieldHillCipher/src/Cipher/CipherParts/: AffineTransformation.c  AsciiMapping.c  BlockDividing.c  CSPRNG.c  CiphertextExpansion.c  Padding.c  Permutation.c
GaloisFieldHillCipher/src/IO/: FileOperations.c  FileValidation.c  LoggerUtils.c  MatrixSerDes.c  PrintUtils.c  SerDes.c  VerbosityControl.c
GaloisFieldHillCipher/src/Math/: FieldBasicOperations.c  MathUtils.c  MatrixDeterminant.c  MatrixInverse.c  MatrixMultiplication.c  MatrixUtils.c
GaloisFieldHillCipher/src/Parsing/: ArgumentParser.c  ModeParsers.c
GaloisFieldHillCipher/src/Secrets/: SecretsGeneration.c
GaloisFieldHillCipher/tests/: unity_test_main.c
GaloisFieldHillCipher/tests/Cipher/: test_CipherUtils.c  test_CipherUtils.h
GaloisFieldHillCipher/tests/Math/: test_FieldBasicOperations.c  test_FieldBasicOperations.h  test_MathUtils.c  test_MathUtils.h
HillCipherWithGaloisField/: HillCipherWithGaloisField.cpp
